<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OfflineActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:paddingTop="20dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:checkable="false"
                android:layout_marginEnd="5dp"
                app:cardCornerRadius="5dp"
                app:strokeWidth="2dp"
                android:backgroundTint="@color/red_light"
                app:strokeColor="@color/black">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/point_musuh"
                        android:fontFamily="@font/urbanist"
                        android:textFontWeight="800"
                        android:textColor="@color/black"
                        tools:targetApi="p" />

                    <TextView
                        android:id="@+id/poin_musuh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:fontFamily="@font/urbanist"
                        android:textFontWeight="800"
                        android:textSize="25sp"
                        android:textColor="@color/black"
                        tools:targetApi="p" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:checkable="false"
                android:layout_marginStart="5dp"
                app:strokeWidth="2dp"
                app:cardCornerRadius="5dp"
                android:backgroundTint="@color/blue_light"
                app:strokeColor="@color/black">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/point_kamu"
                        android:fontFamily="@font/urbanist"
                        android:textFontWeight="800"
                        android:textColor="@color/black"
                        tools:targetApi="p" />

                    <TextView
                        android:id="@+id/poin_kamu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:fontFamily="@font/urbanist"
                        android:textFontWeight="800"
                        android:textSize="25sp"
                        android:textColor="@color/black"
                        tools:targetApi="p" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/ronde_box">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ronde"
                    android:fontFamily="@font/urbanist"
                    android:textFontWeight="800"
                    android:textSize="25sp"
                    android:layout_marginEnd="5dp"
                    tools:targetApi="p"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/txt_ronde"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:fontFamily="@font/urbanist"
                    android:textColor="@color/black"
                    android:textFontWeight="800"
                    android:textSize="25sp"
                    tools:targetApi="p" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp">
                <TextView
                    android:id="@+id/txt_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/extra_gray"
                    android:textAlignment="center"
                    android:fontFamily="@font/urbanist"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/game_box"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/bot"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/bot_image"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bot_desc"
            android:textColor="@color/black"
            android:fontFamily="@font/urbanist"
            android:textFontWeight="700"
            android:textSize="15sp"
            tools:targetApi="p" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="20dp">
            <Button
                android:id="@+id/btn_batu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?attr/materialButtonOutlinedStyle"
                android:text="@string/batu"
                android:drawableTop="@drawable/rock"
                app:cornerRadius="15dp"
                android:fontFamily="@font/grotesque"
                android:textFontWeight="800"
                android:paddingBottom="10dp"
                android:paddingTop="15dp"
                android:backgroundTint="@color/orange"
                android:textColor="@color/black"
                app:strokeWidth="2dp"
                app:strokeColor="@color/black"
                tools:targetApi="p"/>

            <Button
                android:id="@+id/btn_gunting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/scissors"
                app:cornerRadius="15dp"
                android:text="@string/gunting"
                android:layout_marginHorizontal="10dp"
                style="?attr/materialButtonOutlinedStyle"
                android:fontFamily="@font/grotesque"
                android:textFontWeight="800"
                android:paddingBottom="10dp"
                android:paddingTop="15dp"
                android:backgroundTint="@color/orange"
                android:textColor="@color/black"
                app:strokeWidth="2dp"
                app:strokeColor="@color/black"
                tools:targetApi="p" />

            <Button
                android:id="@+id/btn_kertas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?attr/materialButtonOutlinedStyle"
                android:text="@string/kertas"
                app:cornerRadius="15dp"
                android:fontFamily="@font/grotesque"
                android:textFontWeight="800"
                android:paddingBottom="10dp"
                android:drawableTop="@drawable/paper"
                android:paddingTop="15dp"
                android:backgroundTint="@color/orange"
                android:textColor="@color/black"
                app:strokeWidth="2dp"
                app:strokeColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/countdown_box"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="invisible">
        <TextView
            android:id="@+id/countdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="100sp"
            android:fontFamily="@font/urbanist_black"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/result_box"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible"
        android:paddingHorizontal="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hasil akhir"
            android:textColor="@color/gray"
            android:textSize="15sp"
            android:fontFamily="@font/urbanist_regular"/>

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textAlignment="center"
            android:fontFamily="@font/urbanist_extra_bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/playagain_box"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:paddingBottom="20dp"
        android:visibility="invisible">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keluar"
                android:textColor="@color/white"
                android:layout_marginEnd="5dp"
                android:backgroundTint="@color/gray"
                style="?android:attr/buttonBarButtonStyle"
                android:paddingHorizontal="20dp"/>
            <Button
                android:id="@+id/btn_playagain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_lagi"
                android:textColor="@color/white"
                android:layout_marginStart="5dp"
                android:backgroundTint="@color/btn_start"
                style="?android:attr/buttonBarButtonStyle"
                android:paddingHorizontal="20dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>